# openWakeWord_ubuntu_deps

./: README.md  pyproject.toml  setup.py
