[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=openwakeword --cov-report term-missing --flake8 --mypy --mypy-ignore-missing-imports"
flake8-max-line-length = "140"
testpaths = [
    "tests",
    "openwakeword"
]

[project]
name = "openwakeword_ubuntu_deps"
version = "0.6.1"
authors = [
  { name="Armand Garrigou", email="garrigouarmand@gmail.com" },
  # Forked from OG { name="David Scripka", email="david.scripka@gmail.com" },
]
description = "Fork of OpenWakeWord: An open-source audio wake word (or phrase) detection framework with a focus on performance and simplicity"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/g-armand/openWakeWord_ubuntu_deps"
"Forked from" = "https://github.com/dscripka/openWakeWord"
